syntax = "proto3";

package Aranfee;
option go_package = "./customapi";

enum OpCode {
    OP_UNSPECIFIED = 0;
    SERVER_INIT = 1;
    UNIT_POSITION = 2;
    DEPLOYED_UNITS = 3;
}

message ServerInit {
    int32 player_number = 1;
    int32 map_seed = 2;
}

message Vector2Proto {
    float x = 1;
    float y = 2;
}

message UnitPosition{
    string guid =1;
    // Position
    Vector2Proto position = 2;
    // Director vector
    Vector2Proto director = 3;
}
message UnitDefinition {    
    int32 unit_type_enum = 1;
    repeated int32 characters = 2;
    int32 width_rank = 3;
    int32 unit_count = 4;
    string unit_guid = 5;      
    Vector2Proto pos_vec = 6;
    Vector2Proto director_vec = 7;
}

message InitialArmySetup {
    string player_id = 1;
    repeated UnitDefinition units = 2; // El "repeated" es la clave
}